clean up code and start readme

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         </div>
     </footer>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./script.js"></script>
-    <script src="./questions.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/questions.js"></script>
     
 </body>
 
