--- a/highscores.html
+++ b/highscores.html
@@ -91,7 +91,7 @@
            
         </div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script></footer>
-    <script src="./highscores.js"></script>
+    <script src="./js/highscores.js"></script>
 </body>
 
 </html>
