--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <p class="text-center">
                                 Your final score is: <span id="final-score"></span>
                             </p>
-                            <p>
+                            <p class="text-center">
                                 Enter Initials: <input type="text" maxlength="4" id="initials"/>
                             </p>
                             <button type="button" class="btn btn-info btn-lg btn-block" id="submit">Submit</button>
