fix highscores link

--- a/highscores.html
+++ b/highscores.html
@@ -27,7 +27,7 @@
             </li>
             <li class="divider-vertical"></li>                
             <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Highscores</a>
+                <a class="nav-link" href="highscores.html">Highscores</a>
             </li>
         </ul>        
         
